Update and rename fizzbuzz.md to fizzbuzz.html

--- a/fizzbuzz.html
+++ b/fizzbuzz.html
@@ -1,16 +1,19 @@
 
 ## First failing test
 
-Our first test might simply try to create FizzBuzz object, if we do, we will have a compile error: `FizzBuzz is undefined`. 
-This is OK, this is probably the simlest test we can write that will fail. The failing test will tell us what to do next.
+Our first test might simply try to call a fizzBuzz function with the value `1`, if we do, we will have a compile error: `Error C3861 'fizzBuzz': identifier not found`. 
+This is OK, this is probably the simplest test we can write that will fail. The failing test will tell us what to do next.
+
+![image](https://user-images.githubusercontent.com/105429/150808185-108660c4-3d09-4003-93d4-63c58a49a9a6.png)
+
 
 If code in a test fails to compile because we have not yet defined the class or methids, then that counts as a failing test. The first red test is below
 ```
 // in file test.cpp
 #include "pch.h"
 
-TEST(FizzBuzz, CanCreateAFizzBuzzObject) {
-	FizzBuzz fb;
+TEST(FizzBuzz, CanCallfunction) {
+	fizzBuzz(1);
 }
 ```
 
