--- a/fizzbuzz.html
+++ b/fizzbuzz.html
@@ -1,5 +1,5 @@
 
-## First failing test
+<h1>First failing test</h1>
 
 Our first test might simply try to call a fizzBuzz function with the value `1`, if we do, we will have a compile error: `Error C3861 'fizzBuzz': identifier not found`. 
 This is OK, this is probably the simplest test we can write that will fail. The failing test will tell us what to do next.
@@ -7,7 +7,7 @@ This is OK, this is probably the simplest test we can write that will fail. The 
 ![image](https://user-images.githubusercontent.com/105429/150808185-108660c4-3d09-4003-93d4-63c58a49a9a6.png)
 
 
-If code in a test fails to compile because we have not yet defined the class or methids, then that counts as a failing test. The first red test is below
+If code in a test fails to compile because we have not yet defined the class or methods, then that counts as a failing test. The first red test is below
 ```
 // in file test.cpp
 #include "pch.h"
